added aggregated metrics per visit for sleep and activity indices

--- a/notebooks/modelcmp_collect_csvs_v52.ipynb
+++ b/notebooks/modelcmp_collect_csvs_v52.ipynb
@@ -1459,6 +1459,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "a653517a-5507-4aa5-af97-93fe161c0109",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "savefigs = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 95,
    "id": "a4e0a1f7-0c42-4165-95ca-398523a5755a",
    "metadata": {},
@@ -1481,12 +1491,13 @@
     "for mod in results['Model'].unique():\n",
     "    dt = results.loc[results['Model']==mod, :]\n",
     "    ax.scatter(dt['Rho'].mean(), dt['MAE'].mean(), s=33, marker='D', edgecolors='k', linewidths=1.2, color=model_cmap[mod])\n",
-    "fig.savefig(os.path.join(pfp, 'scatter_results_maeVrho_v52.pdf'), bbox_inches='tight')"
+    "if savefigs:\n",
+    "    fig.savefig(os.path.join(pfp, 'scatter_results_maeVrho_v52.pdf'), bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "18929f15-b56e-42f4-987a-2ca96a43ea2d",
    "metadata": {},
    "outputs": [
