--- a/notebooks/modelcomp_nonDL_baselines_dev.ipynb
+++ b/notebooks/modelcomp_nonDL_baselines_dev.ipynb
@@ -88,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ngrav/project/wearables/scripts/data.py:734: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "/home/ngrav/project/wearables/scripts/data.py:737: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  md = md.fillna(md.mean()) # fill with mean of column\n"
      ]
     }
@@ -97,12 +97,13 @@
     "# modify md\n",
     "md = data.get_md_from_id(data.ids)\n",
     "# add model outputs and errors here (add these fx to data loaders, since they handle the raw data slightly differently in future)\n",
-    "md = weardata.add_activitymetrics(data.data['data'], md)"
+    "md = weardata.add_activitymetrics(data.data['data'], md)\n",
+    "md = weardata.calc_agg_metrics(md)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c0e3de52-a765-428d-a01c-80c3ce759a48",
    "metadata": {},
    "outputs": [],
@@ -110,52 +111,56 @@
     "voi = {\n",
     "    'age_enroll': 'continuous',\n",
     "    'GA': 'continuous',\n",
-    "     'gestage_by': 'categorical',\n",
-    "     'insur': 'categorical',\n",
-    "     'ethnicity': 'categorical',\n",
-    "     'bmi_1vis': 'continuous',\n",
-    "     'prior_ptb_all': 'categorical',\n",
-    "     'fullterm_births': 'categorical',\n",
-    "     'alcohol': 'categorical',\n",
-    "     'hypertension': 'categorical',\n",
-    "     'pregestational_diabetes': 'categorical',\n",
-    "     'asthma_yes___2': 'categorical', # diabetes\n",
-    "     'asthma_yes___8': 'categorical', # heart disease\n",
-    "     'asthma_yes___19': 'categorical', # depression\n",
-    "     'other_disease': 'categorical',\n",
-    "     'gestational_diabetes': 'categorical',\n",
-    "     'preeclampsia': 'categorical',\n",
-    "     'corticosteroids': 'categorical',\n",
-    "     'gyn_infection': 'categorical',\n",
-    "     'ptb_37wks': 'categorical',\n",
-    "     'epidural': 'categorical',\n",
-    "     'deliv_mode': 'categorical',\n",
-    "     'infant_wt': 'continuous',\n",
-    "     'infant_length': 'continuous',\n",
-    "     'head_circ': 'continuous',\n",
-    "     'death_baby': 'categorical',\n",
-    "     'neonatal_complication': 'categorical',\n",
-    "     'ervisit': 'categorical',\n",
-    "     'premature_birth1': 'categorical',\n",
-    "     'sleep_qual1': 'categorical',\n",
-    "     'slpenergy1': 'categorical',\n",
-    "     'IS': 'continuous',\n",
-    "     'IV': 'continuous',\n",
-    "     'RA': 'continuous',\n",
-    "     'min_rest': 'continuous',\n",
-    "     'ave_logpseudocount_wake': 'continuous',\n",
-    "     'ave_logpseudocount_sleep': 'continuous',\n",
-    "     'ave_logpseudocount_day': 'continuous',\n",
-    "     'ave_logpseudocount_night': 'continuous',\n",
-    "     'ave_logpseudocount_wknd': 'continuous',\n",
-    "     'ave_logpseudocount_wkday': 'continuous',\n",
+    "    'gestage_by': 'categorical',\n",
+    "    'insur': 'categorical',\n",
+    "    'ethnicity': 'categorical',\n",
+    "    'bmi_1vis': 'continuous',\n",
+    "    'prior_ptb_all': 'categorical',\n",
+    "    'fullterm_births': 'categorical',\n",
+    "    'alcohol': 'categorical',\n",
+    "    'hypertension': 'categorical',\n",
+    "    'pregestational_diabetes': 'categorical',\n",
+    "    'asthma_yes___2': 'categorical', # diabetes\n",
+    "    'asthma_yes___8': 'categorical', # heart disease\n",
+    "    'asthma_yes___19': 'categorical', # depression\n",
+    "    'other_disease': 'categorical',\n",
+    "    'gestational_diabetes': 'categorical',\n",
+    "    'preeclampsia': 'categorical',\n",
+    "    'corticosteroids': 'categorical',\n",
+    "    'gyn_infection': 'categorical',\n",
+    "    'ptb_37wks': 'categorical',\n",
+    "    'epidural': 'categorical',\n",
+    "    'deliv_mode': 'categorical',\n",
+    "    'infant_wt': 'continuous',\n",
+    "    'infant_length': 'continuous',\n",
+    "    'head_circ': 'continuous',\n",
+    "    'death_baby': 'categorical',\n",
+    "    'neonatal_complication': 'categorical',\n",
+    "    'ervisit': 'categorical',\n",
+    "    'premature_birth1': 'categorical',\n",
+    "    'sleep_qual1': 'categorical',\n",
+    "    'slpenergy1': 'categorical',\n",
+    "    'IS': 'continuous',\n",
+    "    'IV': 'continuous',\n",
+    "    'RA': 'continuous',\n",
+    "    'min_rest': 'continuous',\n",
+    "    'ave_logpseudocount_wake': 'continuous',\n",
+    "    'ave_logpseudocount_sleep': 'continuous',\n",
+    "    'ave_logpseudocount_day': 'continuous',\n",
+    "    'ave_logpseudocount_night': 'continuous',\n",
+    "    'ave_logpseudocount_wknd': 'continuous',\n",
+    "    'ave_logpseudocount_wkday': 'continuous',\n",
     "    # add custom ones \n",
+    "    'PQSI': 'continuous',\n",
+    "    'KPAS': 'continuous',\n",
+    "    'EpworthSS': 'continuous',\n",
+    "    'Edinburgh': 'continuous',\n",
     "  }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "338eccf5-bf61-44bb-8d9f-c4ade44c7467",
    "metadata": {},
    "outputs": [],
@@ -165,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "f8e58a02-0ca3-431f-90d8-8132c411a6dd",
    "metadata": {},
    "outputs": [
@@ -205,7 +210,7 @@
        "      <td>29.00 (25.00 - 32.00)</td>\n",
        "      <td>29.00 (25.00 - 32.00)</td>\n",
        "      <td>29.00 (25.00 - 33.00)</td>\n",
-       "      <td>3.33e+00</td>\n",
+       "      <td>3.65e+00</td>\n",
        "      <td>3.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -214,7 +219,7 @@
        "      <td>19.00 (10.00 - 28.50)</td>\n",
        "      <td>20.00 (11.00 - 30.00)</td>\n",
        "      <td>16.00 (10.00 - 24.00)</td>\n",
-       "      <td>3.51e-03**</td>\n",
+       "      <td>3.85e-03**</td>\n",
        "      <td>15.43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -223,7 +228,7 @@
        "      <td>49 (1.99)</td>\n",
        "      <td>49 (2.25)</td>\n",
        "      <td>0 (0.00)</td>\n",
-       "      <td>2.21e-01</td>\n",
+       "      <td>2.42e-01</td>\n",
        "      <td>12.93 (False) -100.00 (True)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -232,7 +237,7 @@
        "      <td>710 (28.83)</td>\n",
        "      <td>611 (28.01)</td>\n",
        "      <td>99 (35.11)</td>\n",
-       "      <td>9.05e+00</td>\n",
+       "      <td>1.09e+01</td>\n",
        "      <td>-2.82 (False) 21.78 (True)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -241,7 +246,7 @@
        "      <td>1229 (49.90)</td>\n",
        "      <td>1107 (50.76)</td>\n",
        "      <td>122 (43.26)</td>\n",
-       "      <td>3.71e+02</td>\n",
+       "      <td>4.91e+02</td>\n",
        "      <td>1.72 (False) -13.30 (True)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -254,53 +259,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ave_logpseudocount_sleep</th>\n",
-       "      <td>ave_logpseudocount_sleep</td>\n",
-       "      <td>0.47 (0.19 - 0.65)</td>\n",
-       "      <td>0.47 (0.18 - 0.65)</td>\n",
-       "      <td>0.51 (0.23 - 0.64)</td>\n",
-       "      <td>1.07e+01</td>\n",
-       "      <td>1.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ave_logpseudocount_day</th>\n",
-       "      <td>ave_logpseudocount_day</td>\n",
-       "      <td>3.18 (1.57 - 4.05)</td>\n",
-       "      <td>3.18 (1.54 - 4.06)</td>\n",
-       "      <td>3.18 (1.75 - 3.99)</td>\n",
-       "      <td>2.73e+01</td>\n",
-       "      <td>0.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ave_logpseudocount_night</th>\n",
-       "      <td>ave_logpseudocount_night</td>\n",
-       "      <td>1.39 (0.70 - 1.83)</td>\n",
-       "      <td>1.38 (0.69 - 1.80)</td>\n",
-       "      <td>1.49 (0.80 - 2.01)</td>\n",
-       "      <td>2.41e-01</td>\n",
-       "      <td>7.59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ave_logpseudocount_wknd</th>\n",
-       "      <td>ave_logpseudocount_wknd</td>\n",
-       "      <td>2.29 (0.59 - 2.87)</td>\n",
-       "      <td>2.29 (0.52 - 2.88)</td>\n",
-       "      <td>2.30 (1.02 - 2.85)</td>\n",
-       "      <td>2.76e+01</td>\n",
-       "      <td>0.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>ave_logpseudocount_wkday</th>\n",
        "      <td>ave_logpseudocount_wkday</td>\n",
        "      <td>2.44 (1.28 - 2.97)</td>\n",
        "      <td>2.43 (1.25 - 2.96)</td>\n",
        "      <td>2.52 (1.42 - 3.03)</td>\n",
-       "      <td>5.20e+00</td>\n",
+       "      <td>5.70e+00</td>\n",
        "      <td>2.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PQSI</th>\n",
+       "      <td>PQSI</td>\n",
+       "      <td>10.00 (7.00 - 12.00)</td>\n",
+       "      <td>10.00 (7.00 - 12.00)</td>\n",
+       "      <td>10.00 (8.00 - 14.00)</td>\n",
+       "      <td>1.15e-02*</td>\n",
+       "      <td>13.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KPAS</th>\n",
+       "      <td>KPAS</td>\n",
+       "      <td>9.29 (7.82 - 10.50)</td>\n",
+       "      <td>9.28 (7.78 - 10.52)</td>\n",
+       "      <td>9.40 (8.12 - 10.38)</td>\n",
+       "      <td>2.56e+01</td>\n",
+       "      <td>0.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EpworthSS</th>\n",
+       "      <td>EpworthSS</td>\n",
+       "      <td>7.00 (3.00 - 11.00)</td>\n",
+       "      <td>7.00 (3.00 - 11.00)</td>\n",
+       "      <td>8.00 (4.00 - 12.00)</td>\n",
+       "      <td>2.99e-01</td>\n",
+       "      <td>7.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Edinburgh</th>\n",
+       "      <td>Edinburgh</td>\n",
+       "      <td>3.00 (0.00 - 6.00)</td>\n",
+       "      <td>3.00 (0.00 - 6.00)</td>\n",
+       "      <td>4.00 (1.00 - 9.00)</td>\n",
+       "      <td>3.40e-03**</td>\n",
+       "      <td>15.66</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>86 rows × 6 columns</p>\n",
+       "<p>90 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -311,11 +316,11 @@
        "gestage_by=1.0                      gestage_by=1.0            710 (28.83)   \n",
        "gestage_by=2.0                      gestage_by=2.0           1229 (49.90)   \n",
        "...                                            ...                    ...   \n",
-       "ave_logpseudocount_sleep  ave_logpseudocount_sleep     0.47 (0.19 - 0.65)   \n",
-       "ave_logpseudocount_day      ave_logpseudocount_day     3.18 (1.57 - 4.05)   \n",
-       "ave_logpseudocount_night  ave_logpseudocount_night     1.39 (0.70 - 1.83)   \n",
-       "ave_logpseudocount_wknd    ave_logpseudocount_wknd     2.29 (0.59 - 2.87)   \n",
        "ave_logpseudocount_wkday  ave_logpseudocount_wkday     2.44 (1.28 - 2.97)   \n",
+       "PQSI                                          PQSI   10.00 (7.00 - 12.00)   \n",
+       "KPAS                                          KPAS    9.29 (7.82 - 10.50)   \n",
+       "EpworthSS                                EpworthSS    7.00 (3.00 - 11.00)   \n",
+       "Edinburgh                                Edinburgh     3.00 (0.00 - 6.00)   \n",
        "\n",
        "                           Pre-term birth_False    Pre-term birth_True  \\\n",
        "age_enroll                29.00 (25.00 - 32.00)  29.00 (25.00 - 33.00)   \n",
@@ -324,52 +329,52 @@
        "gestage_by=1.0                      611 (28.01)             99 (35.11)   \n",
        "gestage_by=2.0                     1107 (50.76)            122 (43.26)   \n",
        "...                                         ...                    ...   \n",
-       "ave_logpseudocount_sleep     0.47 (0.18 - 0.65)     0.51 (0.23 - 0.64)   \n",
-       "ave_logpseudocount_day       3.18 (1.54 - 4.06)     3.18 (1.75 - 3.99)   \n",
-       "ave_logpseudocount_night     1.38 (0.69 - 1.80)     1.49 (0.80 - 2.01)   \n",
-       "ave_logpseudocount_wknd      2.29 (0.52 - 2.88)     2.30 (1.02 - 2.85)   \n",
        "ave_logpseudocount_wkday     2.43 (1.25 - 2.96)     2.52 (1.42 - 3.03)   \n",
+       "PQSI                       10.00 (7.00 - 12.00)   10.00 (8.00 - 14.00)   \n",
+       "KPAS                        9.28 (7.78 - 10.52)    9.40 (8.12 - 10.38)   \n",
+       "EpworthSS                   7.00 (3.00 - 11.00)    8.00 (4.00 - 12.00)   \n",
+       "Edinburgh                    3.00 (0.00 - 6.00)     4.00 (1.00 - 9.00)   \n",
        "\n",
        "                                Padj                         Effect  \n",
-       "age_enroll                  3.33e+00                           3.04  \n",
-       "GA                        3.51e-03**                          15.43  \n",
-       "gestage_by=0.0              2.21e-01  12.93 (False) -100.00 (True)   \n",
-       "gestage_by=1.0              9.05e+00    -2.82 (False) 21.78 (True)   \n",
-       "gestage_by=2.0              3.71e+02    1.72 (False) -13.30 (True)   \n",
+       "age_enroll                  3.65e+00                           3.04  \n",
+       "GA                        3.85e-03**                          15.43  \n",
+       "gestage_by=0.0              2.42e-01  12.93 (False) -100.00 (True)   \n",
+       "gestage_by=1.0              1.09e+01    -2.82 (False) 21.78 (True)   \n",
+       "gestage_by=2.0              4.91e+02    1.72 (False) -13.30 (True)   \n",
        "...                              ...                            ...  \n",
-       "ave_logpseudocount_sleep    1.07e+01                           1.26  \n",
-       "ave_logpseudocount_day      2.73e+01                           0.19  \n",
-       "ave_logpseudocount_night    2.41e-01                           7.59  \n",
-       "ave_logpseudocount_wknd     2.76e+01                           0.18  \n",
-       "ave_logpseudocount_wkday    5.20e+00                           2.33  \n",
+       "ave_logpseudocount_wkday    5.70e+00                           2.33  \n",
+       "PQSI                       1.15e-02*                          13.37  \n",
+       "KPAS                        2.56e+01                           0.32  \n",
+       "EpworthSS                   2.99e-01                           7.36  \n",
+       "Edinburgh                 3.40e-03**                          15.66  \n",
        "\n",
-       "[86 rows x 6 columns]"
+       "[90 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "summary = weardata.describe_from_md(md, voi, 'Pre-term birth', out_file='/home/ngrav/project/wearables/results/cohort_table_v52.csv')\n",
+    "summary = weardata.describe_from_md(md, voi, 'Pre-term birth', out_file='/home/ngrav/project/wearables/results/cohort_table_v522.csv')\n",
     "summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "55031a21-f829-4fae-b2ab-d7939f7a16b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save metadata since it's a bit slow\n",
-    "md.to_csv('/home/ngrav/project/wearables/results/md_v52_220111.csv')"
+    "md.to_csv('/home/ngrav/project/wearables/results/md_v52_220124.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "8cd7dcf5-d613-48c0-8323-664d3cd55b8b",
    "metadata": {},
    "outputs": [
@@ -619,7 +624,7 @@
        "  '4.0': 4.0}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,21 +635,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "da1f3bc3-3a2e-47de-a708-a80f2efe3527",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "156"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# count in group\n",
     "len(md.loc[md['Pre-term birth'], 'record_id'].unique())"
