polishing supplemental figs 2 - 4

--- a/notebooks/eval_merge_model_out_to_md.ipynb
+++ b/notebooks/eval_merge_model_out_to_md.ipynb
@@ -881,7 +881,41 @@
    "id": "258c33e0-95be-4084-aa7e-d510f9fb3999",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def out2md_embeds(md, bst_trainerfp, bst_modelfp, embeds_out=None, out_file=None, verbose=False):\n",
+    "    def loadpkl(file):\n",
+    "        with open(file, 'rb') as f:\n",
+    "            data = pickle.load(f)\n",
+    "            f.close()\n",
+    "        return data\n",
+    "    trainer = loadpkl(bst_trainerfp)\n",
+    "    if verbose:\n",
+    "        total_t = time.time()\n",
+    "    dt = pd.DataFrame()\n",
+    "    embeds = pd.DataFrame()\n",
+    "    for split in ['train', 'test']: # omit val since test_pids contain val_pids (val is a subset of test)\n",
+    "        if verbose:\n",
+    "            tic = time.time()\n",
+    "            print('Starting inference for {} set...'.format(split))\n",
+    "\n",
+    "        evaluation = weareval.eval_trained(trainer, split=split,\n",
+    "                                           modelpkl=bst_modelfp,\n",
+    "                                           two_outputs=True)\n",
+    "        dt = dt.append(pd.DataFrame({\n",
+    "            'y':evaluation.y.numpy(), 'yhat':evaluation.yhat.numpy(), \n",
+    "            'split':[split]*evaluation.y.shape[0],\n",
+    "            'error':(evaluation.yhat - evaluation.y).numpy()\n",
+    "        }, index=evaluation.id))\n",
+    "        embeds = embeds.append(pd.DataFrame(evaluation.out2.numpy(), index=evaluation.id))\n",
+    "        if verbose:\n",
+    "            print('  inference for {} set done in {:.0f}-s\\t{:.2f}-min elapsed'.format(split, time.time()-tic, (time.time()-total_t)/60))\n",
+    "    md = md.merge(dt, left_index=True, right_index=True, how='left')\n",
+    "    if out_file is not None:\n",
+    "        md.to_csv(out_file)\n",
+    "    if embeds_out is not None:\n",
+    "        embeds.to_csv(embeds_out)\n",
+    "    return md, embeds\n"
+   ]
   }
  ],
  "metadata": {
