feat attr updates

--- a/notebooks/interp_featattr.ipynb
+++ b/notebooks/interp_featattr.ipynb
@@ -525,7 +525,13 @@
    "cell_type": "code",
    "execution_count": 71,
    "id": "77ef1751-6523-4463-bf07-d1f33e4f437e",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1156,6 +1162,122 @@
     "b = (res.loc[(res['group']=='Lower-than-actual') & (res['sleep']==1), :].groupby('uid').mean()['attr'] - res.loc[(res['group']=='Low actigraphy-GA') & (res['sleep']!=1), :].groupby('uid').mean()['attr']).to_numpy()\n",
     "\n",
     "mannwhitneyu(a, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc5af5bc-0ebf-4456-8c6c-63cde3961c90",
+   "metadata": {},
+   "source": [
+    "# questions\n",
+    "\n",
+    "## association btw importance and time of (...)\n",
+    "\n",
+    "time of day: weekend vs. weekday, morning vs. evening, sleep v. wake; day vs. night"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "id": "874856b6-e7d4-46e0-a757-7e58e5163dc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def featattr_peruid(X, md, uids, explainer, trainer):\n",
+    "    '''\n",
+    "    Returns:\n",
+    "      df (pd.DataFrame)\n",
+    "      uids (dict): 'groupname': list of unique ids\n",
+    "    '''\n",
+    "    total_t = time.time()\n",
+    "    df = pd.DataFrame()\n",
+    "    counter = 0\n",
+    "    for i, g in enumerate(uids.keys()):\n",
+    "        for uid in uids[g]:\n",
+    "            idx = np.where(md.index==uid)[0].item()\n",
+    "            x = X[idx, :, :].unsqueeze(0)\n",
+    "            x.requires_grad = True\n",
+    "            print('starting idx: {}, unique id: {}\\t{:.2f}-min elapsed'.format(idx, uid, (time.time()-total_t)/60))\n",
+    "            \n",
+    "            if counter==0: # only need to call once, unless want to add salt & pepper noise\n",
+    "                x_baseline = torch.zeros_like(x)\n",
+    "                x_baseline.requires_grad = True\n",
+    "                \n",
+    "            attr = explainer.attributions(input_tensor=x,\n",
+    "                                          baseline=x_baseline,\n",
+    "                                          num_samples=20,\n",
+    "                                          use_expectation=True,\n",
+    "                                          output_indices=0)\n",
+    "            dt = pd.DataFrame(attr[0, 0, :].detach().numpy(), columns=['attr'])\n",
+    "            dt['uid'] = uid\n",
+    "            \n",
+    "            # sleep or wake\n",
+    "            dt['sleep'] = trainer.data.data['data'][uid]['sleep'][:-1].to_numpy()\n",
+    "            \n",
+    "            t = trainer.data.data['data'][uid]['t'][:-1]\n",
+    "            dt['t'] = t.to_list() # does this preserve?\n",
+    "            \n",
+    "            # morning or evening\n",
+    "            dt['morningVevening'] = 'NA'\n",
+    "            dt.loc[((t.apply(lambda x: x.time()) >= datetime.time(hour=6)) & (t.apply(lambda x: x.time()) < datetime.time(hour=12))).to_list(),\n",
+    "                   'morningVevening'] = 'Morning'\n",
+    "            dt.loc[((t.apply(lambda x: x.time()) >= datetime.time(hour=18)) & (t.apply(lambda x: x.time()) <= datetime.time(hour=23, minute=59))).to_list(),\n",
+    "                   'morningVevening'] = 'Evening'\n",
+    "            \n",
+    "            # weekday or weekend\n",
+    "            dt['weekdayVweekend'] = 'Weekday'\n",
+    "            dt.loc[((t.apply(lambda x: x.weekday()) == 5) | (t.apply(lambda x: x.weekday()) == 6)).to_list(),\n",
+    "                   'weekdayVweekend'] = 'Weekend'\n",
+    "            \n",
+    "            # daytime, nighttime\n",
+    "            dt['dayVnight'] = 'Night'\n",
+    "            dt.loc[((t.apply(lambda x: x.time()) >= datetime.time(hour=6)) & (t.apply(lambda x: x.time()) < datetime.time(hour=18))).to_list(), \n",
+    "                   'dayVnight'] = 'Day'\n",
+    "            \n",
+    "            dt['group'] = g\n",
+    "            df = df.append(dt)\n",
+    "            counter += 1\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "id": "58d84473-fc9b-424b-bf3a-5ae7241e0e77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sample low error group, then examine globally on them:\n",
+    "n_samples = 100\n",
+    "lt2wk = {'lt2wk': md_model.loc[(md_model['error'].abs() <= 2), :].sample(n_samples, replace=False).index.to_list()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf3b4e14-5f88-48b4-9204-7bbe824a165a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starting idx: 779, unique id: 2125_14\t0.00-min elapsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "res_lt2wk = featattr_peruid(X, md_model, lt2wk, explainer, trainer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "078dcb16-55c8-4190-bb8c-f336dc2294a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_lt2wk"
    ]
   },
   {
