still finalizing fig3. Must finish tn

--- a/notebooks/eval_model_embeddings.ipynb
+++ b/notebooks/eval_model_embeddings.ipynb
@@ -546,6 +546,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d6180fd-80fa-433e-9a27-2d6ec4623f47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 4))\n",
+    "sns.scatterplot(x=dtwumap[:, 0], \n",
+    "                y=dtwumap[:, 1], \n",
+    "                s=10,\n",
+    "                hue=mddtw['leiden'],\n",
+    "                palette='rocket',\n",
+    "                linewidth=0,\n",
+    "#                 palette='ocean', # tab20c\n",
+    "                legend='full', \n",
+    "                ax=ax)\n",
+    "ax.legend(bbox_to_anchor=(1.01, 1))\n",
+    "ax.set_xticks([])\n",
+    "ax.set_yticks([])\n",
+    "ax.set_xlabel('UMAP1')\n",
+    "ax.set_ylabel('UMAP2')\n",
+    "ax.set_title('Unsupervised learning and clustering')\n",
+    "ax.legend().set_visible(False)\n",
+    "\n",
+    "for c in dt['model_leiden'].unique():\n",
+    "    xyprime = np.mean(dtwumap[np.where(mddtw['leiden']==c)[0], :], 0)\n",
+    "    ax.text(*xyprime, str(c), bbox=dict(boxstyle='circle', fc=\"w\", ec=\"none\", alpha=0.66), weight='bold')\n",
+    "    \n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8b002f25-476b-413c-b1cd-1b5f4b4b3a46",
    "metadata": {},
@@ -1214,7 +1245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
