adding pvals for some interpreatibility thingies

--- a/notebooks/interp_featattr.ipynb
+++ b/notebooks/interp_featattr.ipynb
@@ -10610,16 +10610,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 709,
+   "execution_count": 1,
    "id": "263b067d-dc8a-4258-a640-8df02d17daf8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_auroc_out(a, ax, label, line_cmap):\n",
+    "def plot_auroc_out(a, ax, label, line_cmap, verbose=True):\n",
     "    ax.plot(a[0], np.mean(a[1], 0), color=line_cmap[label], label=label)\n",
     "    ax.fill_between(a[0], np.mean(a[1], 0) - np.std(a[1], 0), np.mean(a[1], 0) + np.std(a[1], 0), \n",
     "                    color=line_cmap[label], alpha=0.5)\n",
-    "    ax.text(0.6, 0.2, f'AU-ROC={np.mean(a[2]):.2f}', transform=ax.transAxes, color=paired_cmap[0]) #  ({np.std(mve[2]):.1f})\n",
+    "    ax.text(0.6, 0.2, f'AU-ROC={np.mean(a[2]):.2f}', transform=ax.transAxes, color=line_cmap[label]) #  ({np.std(mve[2]):.1f})\n",
+    "    if verbose:\n",
+    "        print(f'AU-ROC={np.mean(a[2]):.2f}')\n",
     "    ax.set_xlabel('FPR')\n",
     "    ax.set_ylabel('TPR')\n",
     "    ax.legend()\n",
